--- a/Areas/Admin/_Layout.cshtml
+++ b/Areas/Admin/_Layout.cshtml
@@ -11,9 +11,7 @@
 </head>
 <body>
     <header>
-
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-success border-bottom box-shadow mb-3">
-            <img src="imagem/logo.png">
             <div class="container-fluid">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">IceCream</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
@@ -41,9 +39,7 @@
     </header>
     <div class="container">
         <main role="main" class="pb-3">
-            
             @RenderBody()
-
         </main>
     </div>
 
@@ -57,9 +53,9 @@
              Araçatuba-SP
             </div>
              <div class="col">
-             <h5><i class="bi bi-telephone-fill"></i>Reservas</h5>
+             <h5><i class="bi bi-telephone-fill ps-4"></i>Reservas</h5>
              18-99999-9999
-             E-MAIL: reserva2000@gmail.com
+            
             </div>
              <div class="col">
                 <h5><i class="bi bi-clock"></i>Aberto</h5>
